src/objects/Order_Adjustment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Order # - Line # Combination</description>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line Number from original order</description>
        <label>Line Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Adjustment__c</fullName>
        <label>Order Adjustment</label>
        <referenceTo>Order_Adjustment__c</referenceTo>
        <relationshipLabel>Order Adjustment Line Items</relationshipLabel>
        <relationshipName>Order_Adjustment_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Number__c</fullName>
        <label>SKU Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Checked items are part of Refund.</description>
        <inlineHelpText>Only Checked items are part of Refund.</inlineHelpText>
        <label>Included in Refund</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Adjustment Line Item</label>
    <nameField>
        <label>Order Adjustment Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>